base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - port: 80
      targetPort: 7878
      protocol: TCP
  selector:
    app.kubernetes.io/name: hynseok-app
